[package]
name = "algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "hash_test"
path = "src/tests/hash_test.rs"

[dependencies]
sha2 = "0.10.0"
rsa = "0.5.0"
rand = "0.8.4"
hex-literal = "0.3.4"